Ensure LayoutMedia notifies MediaControls of panel width

Some pages weren't showing native media controls on Android.  This was easiest to repro when using an iframe to embed youtube content.

LayoutMedia notifies MediaControls of the panel width so MediaControls can decide what controls will fit.  LayoutMedia calculates the size during layout, and only notifies the MediaControls if the size changes.

In the case of the bug, LayoutMedia never notifies MediaControls of the correct size.  The first time layout occurs, there is no child MediaControls.  During subsequent layouts, notifications aren't sent because the size hasn't changed.

The fix is to ensure we send the panel width to MediaControls if the size change or if we haven't yet sent the width.

BUG=672227

Review-Url: https://codereview.chromium.org/2561823003
Cr-Commit-Position: refs/heads/master@{#437437}

Former-commit-id: 1d8e2478297992731014b1dc6661a420aaa3f1e9