third_party/WebKit/Source/core/layout/LayoutMedia.h
@@ -82,6 +82,7 @@ class LayoutMedia : public LayoutImage {
 
   LayoutUnit computePanelWidth(const LayoutRect& mediaWidth) const;
 
+  Optional<LayoutUnit> m_lastReportedPanelWidth;
   LayoutObjectChildList m_children;
 };
 
